force-app/main/default/objects/Account_Plan_Settings__mdt/Account_Plan_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to set the account plan columns in the table</description>
    <label>Account Plan Settings</label>
    <pluralLabel>Account Plan Settings</pluralLabel>
</CustomObject>