force-app/main/default/objects/Account_Plan_Settings__mdt/fields/Api_Fields_Name__c.field-meta.xml
<CustomField>
    <fullName>Api_Fields_Name__c</fullName>
    <description>Field to store api fields name to match with the columns</description>
    <inlineHelpText>Insert the api fields name in the same order as the columns.</inlineHelpText>
    <label>Api Fields Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>