force-app/main/default/objects/Account_Plan_Settings__mdt/fields/columns__c.field-meta.xml
<CustomField>
    <fullName>columns__c</fullName>
    <description>Columns names separated by coma</description>
    <inlineHelpText>Coma separated column names</inlineHelpText>
    <label>columns</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>