force-app/main/default/objects/Account_Plan_Settings__mdt/fields/is_Editable__c.field-meta.xml
<CustomField>
    <fullName>is_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Editable</label>
    <type>Checkbox</type>
</CustomField>