force-app/main/default/objects/Account_Plan_Settings__mdt/fields/is_tab__c.field-meta.xml
<CustomField>
    <fullName>is_tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to know if the record is for a tab settings</description>
    <inlineHelpText>set to true if this setting is for a tabs</inlineHelpText>
    <label>is tab</label>
    <type>Checkbox</type>
</CustomField>