force-app/main/default/objects/Account_Plan_Settings__mdt/fields/object_name__c.field-meta.xml
<CustomField>
    <fullName>object_name__c</fullName>
    <description>api object name to retrieve and store the data</description>
    <inlineHelpText>insert api object name</inlineHelpText>
    <label>object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>