force-app/main/default/objects/Account_Plan_Settings__mdt/fields/Tab_column__c.field-meta.xml
<CustomField>
    <fullName>Tab_column__c</fullName>
    <description>Field to store the header of the tab for this columns</description>
    <inlineHelpText>insert the tab name</inlineHelpText>
    <label>Tab column</label>
    <length>255</length>
    <type>Text</type>
</CustomField>