force-app/main/default/objects/Account_Plan_Settings__mdt/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>MasterLabel</columns>
    <columns>Tab_column__c</columns>
    <columns>object_name__c</columns>
    <columns>columns__c</columns>
    <columns>Api_Fields_Name__c</columns>
    <columns>is_Editable__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>